# dxf2G

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.am~  Makefile.in  build.sh  build.sh~  build_all.sh  build_all.sh~  config.h  config.h.in  config.status  configure.ac  configure.ac~  configure~  sinc.sh  sinc.sh~  test_lwp_cnc.dxf
.git.backup/: config
.git_github/: config  index
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.am  Makefile.in  README
examples/: Makefile  Makefile.am  Makefile.in  basetta-wrover_cnc.dxf  basetta-wrover_cnc.dxf.nc  cut.cut  dxf2G  example_1.dxf  example_2.dxf  example_3.dxf  router.tmp
man/: Makefile  Makefile.am  Makefile.in  dxf2G.1
scripts/: Makefile  Makefile.am  Makefile.in  dxf2G.tcl
src/: Makefile  Makefile.am  Makefile.in  dxf2G  dxf2G (copy 1).c  dxf2G (copy 2).c  dxf2G (copy 3).c  dxf2G.c  dxf2G.c~
src/.deps/: dxf2G.Po
